fixes
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>